Final adjustments and bug fixes